# momentum

./: .gitignore  ACCOUNT_MAPPING_PLAN.md  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
public/: index.html
ralph/: PROMPT_build.md  PROMPT_plan.md  loop.sh
specs/: 01_accounts_schema.md  02_tauri_commands.md  03_amortization_model.md  04_simplefin_auth.md  05_apr_minpayment.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  IMPLEMENTATION_PLAN.md  tauri.conf.json
src-tauri/src/: calculator.rs  commands.rs  db.rs  db_integration_tests.rs  errors.rs  keychain.rs  lib.rs  llm.rs  main.rs  models.rs  performance_tests.rs  simplefin.rs  sync_orchestrator.rs  sync_state.rs
src/components/: AccountMappingModal.tsx  ErrorBoundary.tsx  Header.tsx  SettingsModal.tsx  TransactionList.tsx
src/lib/: sync-scheduler.ts  tauri-commands.ts  toast-utils.ts
src/test/: Header.test.tsx  SettingsModal.test.tsx  TransactionList.test.tsx  calculations.test.ts  setup.ts
